<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andima.gestordeapps.AppInfoActivity">

    <ImageView
        android:id="@+id/iconoInfo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nombreInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconoInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paqueteInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/iconoInfo"
        app:layout_constraintTop_toBottomOf="@+id/nombreInfo" />

    <Button
        android:id="@+id/ejecutarInfo"
        android:layout_width="147dp"
        android:layout_height="57dp"
        android:elevation="0dp"
        android:onClick="ejecutarApp"
        android:text="@string/ejecutar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/borrarInfo"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@android:drawable/ic_delete"
        android:onClick="borrarApp"
        android:text="@string/borrar"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/desinstalarInfo"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="8dp"
        android:drawableStart="@android:drawable/ic_menu_delete"
        android:onClick="desinstalarApp"
        android:text="@string/desinstalar"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/borrarInfo"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/borrarInfo" />

    <Button
        android:id="@+id/ajustesInfo"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="6dp"
        android:drawableStart="@android:drawable/ic_menu_manage"
        android:onClick="ajustesApp"
        android:text="@string/ajustes"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/borrarInfo"
        app:layout_constraintTop_toTopOf="@+id/borrarInfo" />

    <Button
        android:id="@+id/abrirEnPlayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="abrirEnPlayApp"
        android:text="@string/buscar_en_play"
        app:layout_constraintBottom_toTopOf="@+id/borrarInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ejecutarInfo" />
</android.support.constraint.ConstraintLayout>
